# ByteStream

./: CMakeLists.txt  README.md
include/: ByteStream.hpp
src/: ByteStream.cpp
tests/: Simple.cpp
